[package]
name = "uraura"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.22"
rand = "0.9"
# tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "~0.6"
chrono = "0.4.43"

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "cookies"]
 
[profile.dev]
debug = 0

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = true
